# realsense

./: .gitignore  CMakeLists.txt  Readme.md  run.sh
libs/glad/include/glad/: gl.h
libs/glad/src/: gl.c
libs/glad__/include/glad/: gl.h
libs/glad__/src/: gl.c
libs/imgui/: CMakeLists.txt
libs/imgui/backends/: imgui_impl_glfw.cpp
libs/imgui/src/: Makefile  example_glfw_opengl3  imgui.ini
src/: CMakeLists.txt
src/app/: Application.cpp  CMakeLists.txt  main.cpp
src/app/include/: Application.cpp  Application.h
src/core/: CMakeLists.txt
src/core/include/cvt/core/: AppState.h  CameraManager.h
src/core/src/: CameraManager.cpp
src/processing/: CMakeLists.txt
src/processing/include/cvt/processing/: Engine.h  IProcessor.h  Processors.h
src/processing/src/: Engine.cpp  GrayscaleProcessor.cpp  IProcessor.cpp
src/ui/: CMakeLists.txt
src/ui/include/cvt/ui/: TextureManager.h  UIManager.h
src/ui/src/: TextureManager.cpp  UIManager.cpp
